# keytao-installer

./: .gitignore  Cargo.toml  Dockerfile.appimage  README.md  flake.nix  package.json  pnpm-lock.yaml  test_globals.rs  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-linux.yml  release.yml
crates/keytao-core/: Cargo.toml
crates/keytao-core-ffi/: Cargo.toml  build.rs
crates/keytao-core-ffi/include/: keytao_core.h
crates/keytao-core-ffi/src/: lib.rs
crates/keytao-core/src/: lib.rs
crates/keytao-ibus/: Cargo.toml
crates/keytao-ibus/src/: engine.rs  main.rs
crates/keytao-linux-ime/: Cargo.toml  README.md  keytao-wayland-launcher.desktop
crates/keytao-linux-ime/src/: engine.rs  gnome_ibus_engine.rs  ibus_backend.rs  main.rs  panel.rs  print_globals.rs  tray.rs  wayland_backend.rs  wayland_backend_kde.rs  x11_backend.rs
crates/keytao-macos-ime/: Package.swift  build.sh  dev.entitlements.plist
crates/keytao-macos-ime/Resources/: Info.plist
crates/keytao-macos-ime/Sources/KeyTaoIME/: CandidatePanel.swift  EngineInit.swift  IMKSetup.swift  InputController.swift  main.swift
nix/: home-manager.nix  nixos.nix
scripts/: _docker-build.sh  build-linux.sh  container-build.sh  patchelf-dev.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  installation.yaml  tauri.conf.json  user.yaml
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rime.rs
src-tauri/src/ime/: linux.rs  mod.rs
src/components/: ImeOverlay.tsx  ImePanel.tsx
