[package]
name = "keytao-installer"
version = "0.0.7-alpha"
description = "KeyTao input method installer"
authors = ["Rea <hi@rea.ink>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keytao_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
futures-util = "0.3"
zip = "2"
tokio = { version = "1", features = ["full"] }
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keytao-core = { path = "../crates/keytao-core" }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
enigo = "0.2"
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
xkbcommon = { version = "0.7", features = ["wayland"] }
memmap2 = "0.9"
libc = "0.2"
tracing = "0.1"
tiny-skia = "0.11"
cosmic-text = "0.12"
