[package]
name = "keytao-core-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "keytao_core_ffi"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keytao-core = { path = "../keytao-core" }

[build-dependencies]
cbindgen = "0.27"
