[package]
name = "keytao-ibus"
version = "0.1.0"
edition = "2021"
description = "KeyTao ibus engine for Linux (X11 + Wayland via ibus)"

# This binary only makes sense on Linux
[target.'cfg(target_os = "linux")'.dependencies]
keytao-core = { path = "../keytao-core" }
tokio = { workspace = true }
serde = { workspace = true }
zbus = { version = "4", default-features = false, features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
