[package]
name = "keytao-linux-ime"
version = "0.1.0"
edition = "2021"
description = "KeyTao Linux IME daemon with Wayland input-method-v2, XIM, and IBus-compatible frontends"

[[bin]]
name = "print_globals"
path = "src/print_globals.rs"

[[bin]]
name = "keytao-ime"
path = "src/main.rs"

# ── Linux-only dependencies ───────────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
keytao-core = { path = "../keytao-core" }
tokio = { workspace = true }
serde = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Wayland: input-method-v2 for wlroots-like compositors, input-method-v1 for KDE/KWin
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }

# XKB state machine for both Wayland (evdev→keysym) and X11 (keycode→keysym)
xkbcommon = { version = "0.7", features = ["wayland", "x11"] }

# X11: XIM server + candidate window
xim = { version = "0.5", features = ["x11rb-server", "x11rb-xcb"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
libc = "0.2"
dirs = "5"

# Candidate panel rendering (software rasteriser, no GPU required)
tiny-skia = "0.11"
freetype-rs = "0.38"

# SHM pool helper (anonymous fd for Wayland shm)
memmap2 = "0.9"

# IBus D-Bus protocol for Chromium/CEF apps (e.g. WeChatAppEx)
zbus = { version = "4", features = ["tokio"] }

# System tray icon for the daemon
ksni = "0.2"
